<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Transaction</string>

    <string name="enter_your_pin">Enter your PIN</string>
    <string name="pin_entry_message">Please enter your card PIN number</string>
    <string name="pin_retry_message">Incorrect PIN. %1$s tries left.</string>

    <string name="transaction">Insert, Swipe or Tap to pay</string>
    <string name="time">00:00</string>
    <string name="number_zero">0</string>
    <string name="payment">Payment</string>
    <string name="total_amount">Total Amount</string>

    <string name="wait">Please wait</string>
    <string name="connecting">Connecting to server</string>
    <string name="initialise">Initializing…</string>

</resources>