<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.activities.TransactionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/title"

            app:layout_constraintEnd_toStartOf="@+id/title"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="80dp"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/title"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/title"
            app:srcCompat="@drawable/close"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/main_container_spacing"
            android:text="@string/total_amount"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"

            app:layout_constraintBottom_toTopOf="@+id/amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_space"
            android:text="@string/number_zero"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/leds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_container_spacing"
            app:layout_constraintBottom_toTopOf="@+id/timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/amount">

            <ImageView
                android:id="@+id/led_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/led_2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/led"
                app:tint="@color/lightGrey" />

            <ImageView
                android:id="@+id/led_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/led_3"
                app:layout_constraintStart_toEndOf="@+id/led_1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/led"
                app:tint="@color/lightGrey" />

            <ImageView
                android:id="@+id/led_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/led_4"
                app:layout_constraintStart_toEndOf="@+id/led_2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/led"
                app:tint="@color/lightGrey" />

            <ImageView
                android:id="@+id/led_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/led_3"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/led"
                app:tint="@color/lightGrey" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminate="false"
            android:max="100"
            android:progressDrawable="@drawable/circular_progress_bar"
            app:layout_constraintEnd_toEndOf="@id/timer"
            app:layout_constraintStart_toStartOf="@id/timer"
            app:layout_constraintTop_toTopOf="@id/timer"
            app:layout_constraintBottom_toBottomOf="@id/timer" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="40dp"
            android:gravity="center"
            android:text="@string/time"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="@dimen/text_size"

            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/leds" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_container_spacing"
            android:text="@string/transaction"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_space"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description">

            <ImageView
                android:id="@+id/icon_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon_2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/insert_card" />

            <ImageView
                android:id="@+id/icon_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon_3"
                app:layout_constraintStart_toEndOf="@+id/icon_1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cash_banknote_hand_arrow_up" />

            <ImageView
                android:id="@+id/icon_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/icon_2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/contactless" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>